# math

./: .gitignore  CMakeLists.txt  LICENSE
include/: common.hpp  detail.hpp  math.hpp  matrix.hpp  number.hpp  quaternion.hpp  traits.hpp  units.hpp  vectorsoa.hpp
include/units/: angle.hpp  inch.hpp  length.hpp  mass.hpp  meter.hpp  quantity.hpp  ratio.hpp
latex/: quaternion.tex
test/: CMakeLists.txt  matrix.cpp  quaternion.cpp  test.hpp  units.cpp
